MB-36844: Make getMeta return RECOMMIT_IN_PROGRESS

getMeta should fail if the found prepare may be visible, to avoid
exposing an old value.

This brings getMeta in line with other get methods.

Change-Id: I201d425129f8ae57939a572c8c97dc05f7a3b1fa
Reviewed-on: http://review.couchbase.org/117744
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>